# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,7 @@ import channelsRouter from "./channels";
 import videosRouter from "./videos";
 import overridesRouter from "./overrides";
 import translateRouter from "./translate";
+import synopsisRouter from "./synopsis";
 import sitemapRouter from "./sitemap";
 import articlesRouter from "./articles";
 import feedRouter from "./feed";
@@ -15,6 +16,7 @@ router.use(channelsRouter);
 router.use(videosRouter);
 router.use(overridesRouter);
 router.use(translateRouter);
+router.use(synopsisRouter);
 router.use(sitemapRouter);
 router.use(articlesRouter);
 router.use(feedRouter);
